# makey-midi

./: Cargo.toml  README.md  config.toml
.github/workflows/: rust.yml
src/: args.rs  config.rs  main.rs
